--- a/macos-setup/index.html
+++ b/macos-setup/index.html
@@ -1,10 +1,10 @@
-<!doctype html><html lang=en-us><meta charset=utf-8><meta name=language content="english"><meta http-equiv=content-type content="text/html"><meta name=generator content="Hugo 0.81.0"><meta name=description content="Gastlit by a computer"><meta name=author content="Douglas Myers-Turnbull"><title>Setup for macOS for development | Gaslit by a computer</title><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=/css/index.css><link rel=canonical href=/macos-setup/><link rel=alternate type=application/rss+xml href title="Gaslit by a computer"><header><h1><a href>Gaslit by a computer</a></h1></header><article><header><h1>Setup for macOS for development</h1></header><p>This is a <em>draft</em>.</p><p>There are other guides for setting up macOS for development.
+<!doctype html><html lang=en-us><meta charset=utf-8><meta name=language content="english"><meta http-equiv=content-type content="text/html"><meta name=generator content="Hugo 0.82.0"><meta name=description content="Gastlit by a computer"><meta name=author content="Douglas Myers-Turnbull"><title>Setup for macOS for development | Gaslit by a computer</title><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=/css/index.css><link rel=canonical href=/macos-setup/><link rel=alternate type=application/rss+xml href title="Gaslit by a computer"><header><h1><a href>Gaslit by a computer</a></h1></header><article><header><h1>Setup for macOS for development</h1></header><p>This is a <em>draft</em>.</p><p>There are other guides for setting up macOS for development.
 I found this guide useful for graduate students who are relatively new to programming.<br>Here’s what you’ll do:</p><ul><li>Basic setup and installing tools</li><li>Set up a good shell environment</li><li>Fix security problems and add SSH and GPG keys</li><li>Install final software</li></ul><h3 id=initial-setup>Initial setup</h3><p>The obvious: Upgrade macOS, enable FileVault, and remove unneeded Login Items.</p><p>Install <a href=https://brew.sh/>Homebrew</a> and update it: <code>brew update && brew upgrade</code>.
 Install a few extra Linux utils: <code>brew install ssh-copy-id coreutils git</code> and an upgraded version
 of Bash (Bash 5): <code>brew install bash</code> as well as ZSH: <code>brew install zsh</code>.
 Install the text editors <a href=https://www.sublimetext.com/>Sublime</a> (<code>brew cask install sublime-text</code>)
 and/or <a href=https://atom.io/>Atom</a> (<code>brew install atom</code>).
-Make an account on <a href=https://github.com/>GitHub</a> and request access to any orgs you need.</p><h3 id=shell-profile>Shell profile</h3><p>Now that ZSH is installed, let’s improve it. Install <a href=https://ohmyz.sh/>Oh My Zsh</a>
+Make an account on <a href=https://github.com/>GitHub</a> and request access to any orgs you need.</p><p>And a couple of silly things:</p><ul><li>Show hidden files: Run <code>defaults write com.apple.Finder AppleShowAllFiles true</code>.</li><li>Show filename extensions: Do this in Finder → Settings → Advanced.</li></ul><h3 id=shell-profile>Shell profile</h3><p>Now that ZSH is installed, let’s improve it. Install <a href=https://ohmyz.sh/>Oh My Zsh</a>
 and switch to ZSH as your default shell: <code>chsh -s $(which zsh)</code> and
 Restart your terminal. You should now have a colorful shell, complete with a plugin for Git.</p><p>To keep the config for ZSH and Bash consistent, add a common config file:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>echo <span style=color:#e6db74>&#39;export PATH=/usr/local/git/bin:/usr/local/sbin:$PATH&#39;</span> &gt; ~/.commonrc
 echo <span style=color:#e6db74>&#39;alias brewski=&#34;brew update &amp;&amp; brew upgrade &amp;&amp; brew cleanup; brew doctor&#34;&#39;</span> &gt;&gt; ~/.commonrc
@@ -24,16 +24,24 @@ connections. In asymmetric cryptography, there are two keys: a public one and a 
 The public key encrypt messages, while the private one is needed to decrypt them. This means that
 – although you shouldn’t – you could send your public key out to everyone. But your private key
 must remain on your computer and be secure. For historical reasons, SSH and OpenSSL provide two
-independent mechanisms for, but they’re similar in this functionality.</p><p>Follow <a href=https://docs.github.com/en/github/authenticating-to-github/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent>GitHub’s SSH keys guide</a>
-to generate SSH keys and add them to GitHub. The path should be <code>~/.ssh/id_rsa</code>, unless you prefer
-keeping separate keys for GitHub. Don’t bother to add a passcode: If someone has access
+independent mechanisms for, but they’re similar in this functionality.</p><h5 id=generating-the-keys>Generating the keys</h5><p><em>Note:</em>
+You can follow
+<a href=https://docs.github.com/en/github/authenticating-to-github/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent>GitHub’s guide to create keys</a>,
+which is almost identical.</p><p>To generate SSH keys, I recommend:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>ssh-keygen -t ed25519 -a <span style=color:#ae81ff>100</span>
+</code></pre></div><p>Some servers might not support EdDSA yet.
+If needed, you can instead use:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>ssh-keygen -t rsa -b <span style=color:#ae81ff>4096</span> -o -a <span style=color:#ae81ff>100</span> -T ~/.ssh/id_rsa
+</code></pre></div><p>The output path (<code>-T</code>) should be the default, but you may want to name it with something that reflects the server it’s meant for.
+In either case, don’t bother to set a passcode: If someone has access
 to your files you have bigger problems. (Instead, rely on encryption (FileVault) and
-a strong password.) Make sure to run the <code>git config</code> commands.</p><p>Create or edit <code>~/.ssh/config</code>:</p><ul><li>Disable SSH agent forwarding, <a href=https://security.stackexchange.com/questions/101783/are-there-any-risks-associated-with-ssh-agent-forwarding>which</a>
+a strong password.) Start the SSH agent: <code>eval $(ssh-agent -s)</code>.</p><h5 id=add-to-github>Add to GitHub</h5><p>Follow <a href=https://docs.github.com/en/github/authenticating-to-github/adding-a-new-ssh-key-to-your-github-account>GitHub’s SSH keys guide</a>
+to add your keys to GitHub. The path will be <code>~/.ssh/id_ed25519</code> if you kept the default name.
+Make sure to run the <code>git config</code> commands.</p><p>Create or edit <code>~/.ssh/config</code>:</p><ul><li>Disable SSH agent forwarding, <a href=https://security.stackexchange.com/questions/101783/are-there-any-risks-associated-with-ssh-agent-forwarding>which</a>
 <a href=https://en.wikipedia.org/wiki/Ssh-agent#Security_issues>is</a>
 <a href=https://github.com/microsoft/vscode-remote-release/issues/1222>very</a>
 <a href=https://manpages.debian.org/buster/openssh-client/ssh.1.en.html#A>insecure</a>.
 Also disable X forwarding, which also has <a href=https://security.stackexchange.com/questions/14815/security-concerns-with-x11-forwarding>security concerns</a>.
-You’re unlikely to need either.</li></ul><p>Your config might look something like this:</p><pre><code># Disable SSH agent forwarding
+You’re unlikely to need either.
+Note that may also need <a href=https://linuxize.com/post/using-the-ssh-config-file/>other SSH config options</a>.</li></ul><p>Your config might look something like this:</p><pre><code># Disable SSH agent forwarding
 # https://heipei.io/2015/02/26/SSH-Agent-Forwarding-considered-harmful/
 ForwardAgent no
 ForwardX11 no
@@ -41,14 +49,14 @@ ForwardX11 no
 ForwardX11Trusted no
 
 Host github
-	HostName github.com
-	IdentityFile ~/.ssh/tirith-github
-	User dmyersturnbull@gmail.com
-
-</code></pre><p>If you need to connect to another server, add this and run <code>ssh-copy-id</code> to transfer your key:</p><pre><code>Host lab
-	HostName my.server.x
-	User kelly
-    IdentityFile ~/.ssh/id_rsa
+HostName github.com
+IdentityFile ~/.ssh/tirith-github
+User dmyersturnbull@gmail.com
+</code></pre><p><em>Note:</em> On Windows and some versions of macOS, some options may not be supported.
+Just remove any options that are not, and consider keeping other options that were set in the default config.</p><p>If you need to connect to another server, add this and run <code>ssh-copy-id</code> to transfer your key:</p><pre><code>Host lab
+HostName my.server.x
+User kelly
+IdentityFile ~/.ssh/id_rsa
 </code></pre><p>Install GPG: <code>brew install gnupg</code>. Then follow GitHub’s guides to
 <a href=https://docs.github.com/en/github/authenticating-to-github/generating-a-new-gpg-key>generate a GPG key</a>
 and <a href=https://docs.github.com/en/github/authenticating-to-github/adding-a-new-gpg-key-to-your-github-account>add the GPG key to your account</a>.
@@ -63,11 +71,13 @@ Operating System. Then follow the instructions exactly, including the “Automat
 This may not work through some company and university firewalls.</p><h3 id=final-software>Final software</h3><p>macOS’s built-in Java is seriously out-of-date.
 You can install via Homebrew: <code>brew install --cask oracle-jdk</code>.
 You can alternatively download it from Oracle:
-<a href=https://www.oracle.com/java/technologies/javase-jdk15-downloads.html>JDK 15</a>.
+<a href=https://www.oracle.com/java/technologies/javase-jdk16-downloads.html>JDK 16</a>.
 Do <em>not</em> use OpenJDK: The performance is nowhere near as high.
 (You might only need the runtime platform, but the Development Kit isn’t large.)
 For Python, I recommend <a href>Miniconda</a>. Take a look at
-<a href=https://dmyersturnbull.github.io/#-simple-setup>these steps</a>.</p><h3 id=supplement-aliases>Supplement: aliases</h3><p>Also see <a href=https://github.com/webpro/awesome-dotfiles>awesome-dotfiles</a>.</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash><span style=color:#75715e># xdg-open occasionally assumed in scripts,</span>
+<a href=https://dmyersturnbull.github.io/#-simple-setup>these steps</a>.
+Finally, check out <a href=https://dmyersturnbull.github.io/data-science-setup/>data science setup steps</a>
+to set up a nice development environment for Python.</p><h3 id=supplement-aliases>Supplement: aliases</h3><p>Also see <a href=https://github.com/webpro/awesome-dotfiles>awesome-dotfiles</a>.</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash><span style=color:#75715e># xdg-open occasionally assumed in scripts,</span>
 <span style=color:#75715e># so aliasing it to macOS&#39;s `open` is a good idea</span>
 alias xdg-open<span style=color:#f92672>=</span>open
 
