deploy: f5d6e1fcee5474353e05e673813ffa7c3653a23c

--- a/linux-setup/index.html
+++ b/linux-setup/index.html
@@ -34,6 +34,7 @@ ForwardX11 no
 # turn off X forwarding for better security
 ForwardX11Trusted no
 
+
 # Modify these as needed
 Host *
 ServerAliveInterval 60
@@ -50,11 +51,10 @@ User kelly
 IdentityFile ~/.ssh/id_ed25519
 </code></pre><p>On macOS, <code>AddKeysToAgent yes</code> might be wanted.
 After saving the config, run:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>chmod <span style=color:#ae81ff>644</span> ~/.ssh/config
-</code></pre></div><h3 id=create-gpg-keys>Create GPG keys</h3><p>Install GPG: <code>brew install gnupg</code>. Then follow GitHub’s guides to
-<a href=https://docs.github.com/en/github/authenticating-to-github/generating-a-new-gpg-key>generate a GPG key</a>
-and <a href=https://docs.github.com/en/github/authenticating-to-github/adding-a-new-gpg-key-to-your-github-account>add the GPG key to your account</a>.
-Again, skip the passphrase.
-The general steps are: <code>gpg --full-generate-key</code> and copying the output of
+</code></pre></div><h3 id=create-gpg-keys>Create GPG keys</h3><p>Install GPG: <code>apt install gnupg</code>, <code>dnf install gnupg</code>, <code>brew install gnupg</code>, or <code>choco install gpg4win</code>.
+Then:</p><pre><code>gpg --full-generate-key -t ed25519
+</code></pre><p>Again, skip the passphrase. Move your mouse or type some keys to help the pseudorandom number generator.</p><p>Then follow GitHub’s guide to <a href=https://docs.github.com/en/github/authenticating-to-github/adding-a-new-gpg-key-to-your-github-account>add the GPG key to your account</a>.
+The steps are: copy the output of
 <code>gpg --list-secret-keys --keyid-format LONG</code> to GitHub.
 Among other things, this will allow you to
 <a href=https://docs.github.com/en/github/authenticating-to-github/signing-commits>sign your commits</a>: run
