deploy: e1195642c75da2022d1724963bfab65e1449d270

--- a/local-mariadb/index.html
+++ b/local-mariadb/index.html
@@ -39,4 +39,4 @@ popd
 </code></pre></div><p>Note that <code>~/bin/</code> must be on your <code>PATH</code>.
 You can start the server:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>nohup mysql_start &amp;
 </code></pre></div><p>And log in as an admin user:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>mysql --user<span style=color:#f92672>=</span><span style=color:#e6db74>${</span>USER<span style=color:#e6db74>}</span>
-</code></pre></div><p>**Also see the <a href=https://dmyersturnbull.github.io/mariadb-best-practices>MariaDB best practices</a> guide.</p></article></html>
+</code></pre></div><p><strong>Also see the <a href=https://dmyersturnbull.github.io/mariadb-best-practices>MariaDB best practices</a> guide.</strong></p></article></html>
