--- a/mariadb-best-practices/index.html
+++ b/mariadb-best-practices/index.html
@@ -1,11 +1,16 @@
 <!doctype html><html lang=en-us><meta charset=utf-8><meta name=language content="english"><meta http-equiv=content-type content="text/html"><meta name=generator content="Hugo 0.82.1"><meta name=description content="Gastlit by a computer"><meta name=author content="Douglas Myers-Turnbull"><title>Best practices for MySQL/MariaDB in 2021 | Gaslit by a computer</title><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=/css/index.css><link rel=canonical href=/mariadb-best-practices/><link rel=alternate type=application/rss+xml href title="Gaslit by a computer"><header><h1><a href>Gaslit by a computer</a></h1></header><article><header><h1>Best practices for MySQL/MariaDB in 2021</h1></header><p>This lists some best practices and useful scripts for MariaDB and MySQL.<br><em>Also see: <a href=https://dmyersturnbull.github.io/software-testing/>install MariaDB without sudo</a></em></p><h2 id=database-creation>Database creation</h2><p>The current best choice for character set and collation in MariaDB with InnoDB is:</p><ul><li>character set: utf8mb4</li><li>collation: utf8mb4_unicode_520_ci</li></ul><p>Like this:</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>CREATE</span> <span style=color:#66d9ef>DATABASE</span> <span style=color:#f92672>`</span>valar<span style=color:#f92672>`</span> <span style=color:#66d9ef>DEFAULT</span> CHARACTER <span style=color:#66d9ef>SET</span> utf8mb4 <span style=color:#66d9ef>COLLATE</span> utf8mb4_unicode_520_ci;
-</code></pre></div><p>Per database, I recommend a write-access user and a read-only user.
-It’s for the principle of least privilege. Assuming users don’t have direct SQL access, you may not need a password.
-Here’s a single script (replace <code>MY_DB_NAME</code>):</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>create</span> <span style=color:#66d9ef>database</span> MY_DB_NAME <span style=color:#66d9ef>default</span> character <span style=color:#66d9ef>set</span> utf8mb4 <span style=color:#66d9ef>collate</span> utf8mb4_unicode_520_ci;
+</code></pre></div><h2 id=hardening>Hardening</h2><p>To improve security, I recommend following <strong><a href="https://www.google.com/search?q=mysql+security+best+practices">dedicated security guides</a></strong>.
+Basic steps might include:</p><ul><li>Make sure to install with <code>mysql_secure_installation</code></li><li>Drop the <code>test</code> database</li><li>Disable remote access (e.g. with <code>bind-address=127.0.0.1</code> under <code>[mysqld]</code>)</li><li>Always require TLS if remote access is enabled, and run with <code>--require_secure_transport=ON</code></li><li>Start the server with <code>-chroot</code></li><li>Remove the history file (e.g. <code>.mysql_history</code>)</li><li>Set <code>set-variable=local-infile=0</code> under <code>[mysqld]</code></li><li>Obfuscate the port (something other than 3306)</li><li>Obfuscate the root username (e.g. <code>rename user root to sadf346s9</code>)</li><li>Set <code>max_connect_errors</code> under <code>[mysqld]</code> to something reasonable</li><li>Consider encrypting the stored data, such as with storage device encryption,
+filesystem encryption, or <a href=https://mariadb.com/kb/en/data-at-rest-encryption-overview/>MariaDB Data-at-Rest Encryption</a></li></ul><p><strong>Note: your config file might be <code>my.cnf</code> or <code>.my.cnf</code> (with a dot).</strong></p><p>Per database, I recommend an admin user, a write-access user, and a
+read-only user.
+Assuming users don’t have direct SQL access and only localhost access
+is permitted, you may not need a password for any of these.</p><p>Here’s a single script that creates a database following these steps (replace <code>MY_DB_NAME</code>):</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sql data-lang=sql><span style=color:#66d9ef>create</span> <span style=color:#66d9ef>database</span> MY_DB_NAME <span style=color:#66d9ef>default</span> character <span style=color:#66d9ef>set</span> utf8mb4 <span style=color:#66d9ef>collate</span> utf8mb4_unicode_520_ci;
 <span style=color:#66d9ef>create</span> <span style=color:#66d9ef>user</span> readonly<span style=color:#f92672>@</span>localhost identified <span style=color:#66d9ef>by</span> <span style=color:#e6db74>&#39;hasread&#39;</span>;
 <span style=color:#66d9ef>create</span> <span style=color:#66d9ef>user</span> writeaccess<span style=color:#f92672>@</span>localhost identified <span style=color:#66d9ef>by</span> <span style=color:#e6db74>&#39;haswrite&#39;</span>;
+<span style=color:#66d9ef>create</span> <span style=color:#66d9ef>user</span> <span style=color:#66d9ef>admin</span><span style=color:#f92672>@</span>localhost identified <span style=color:#66d9ef>by</span> <span style=color:#e6db74>&#39;hasallaccess&#39;</span>;
 <span style=color:#66d9ef>grant</span> <span style=color:#66d9ef>select</span> <span style=color:#66d9ef>on</span> MY_DB_NAME <span style=color:#66d9ef>to</span> readonly<span style=color:#f92672>@</span>localhost;
 <span style=color:#66d9ef>grant</span> <span style=color:#66d9ef>select</span>, <span style=color:#66d9ef>insert</span>, <span style=color:#66d9ef>update</span>, <span style=color:#66d9ef>delete</span> <span style=color:#66d9ef>on</span> MY_DB_NAME <span style=color:#66d9ef>to</span> writeaccess<span style=color:#f92672>@</span>localhost;
+<span style=color:#66d9ef>grant</span> <span style=color:#66d9ef>all</span> <span style=color:#66d9ef>on</span> MY_DB_NAME <span style=color:#66d9ef>to</span> <span style=color:#66d9ef>admin</span><span style=color:#f92672>@</span>localhost;
 flush <span style=color:#66d9ef>privileges</span>;
 </code></pre></div><h2 id=write-the-schema>Write the schema</h2><p>Here’s a script to write the schema in a nice way.</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash><span style=color:#75715e>#!/usr/bin/env bash
 </span><span style=color:#75715e></span>set -euo pipefail
@@ -47,51 +52,51 @@ This is much more robust because having only one table per file means that we on
 rather than all if a file is corrupted. The hex-encoding also adds robustness.
 Tools can often fix corrupted gzipped UTF-8 files, whereas fixing is much more difficult if
 arbitrary data is included. There is no loss in compression ratio becausew gzip is used anyway,
-so the only downside is write speed.</p><pre><code>#!/usr/bin/env bash
-set -euo pipefail
-IFS=$'\n\t'
-default_path_=&quot;/bak/mariadb/dbname/nightly&quot;
+so the only downside is write speed.</p><div class=highlight><pre style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash><span style=color:#75715e>#!/usr/bin/env bash
+</span><span style=color:#75715e></span>set -euo pipefail
+IFS<span style=color:#f92672>=</span><span style=color:#e6db74>$&#39;\n\t&#39;</span>
+default_path_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;/bak/mariadb/dbname/nightly&#34;</span>
 
-if (( $# == 1 )) &amp;&amp; [[ &quot;${1}&quot; == &quot;--help&quot; ]]; then
-	echo &quot;Usage: ${0} [&lt;path=${default_path_}&gt;]&quot;
-	echo &quot;Exports all the data in a database as one gzipped sql file per table.&quot;
-	echo &quot;Requires environment vars DB_NAME, DB_USER, and DB_PASSWORD&quot;
-	exit 0
-fi
+<span style=color:#66d9ef>if</span> <span style=color:#f92672>((</span> $# <span style=color:#f92672>==</span> <span style=color:#ae81ff>1</span> <span style=color:#f92672>))</span> <span style=color:#f92672>&amp;&amp;</span> <span style=color:#f92672>[[</span> <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>1<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#f92672>==</span> <span style=color:#e6db74>&#34;--help&#34;</span> <span style=color:#f92672>]]</span>; <span style=color:#66d9ef>then</span>
+	echo <span style=color:#e6db74>&#34;Usage: </span><span style=color:#e6db74>${</span>0<span style=color:#e6db74>}</span><span style=color:#e6db74> [&lt;path=</span><span style=color:#e6db74>${</span>default_path_<span style=color:#e6db74>}</span><span style=color:#e6db74>&gt;]&#34;</span>
+	echo <span style=color:#e6db74>&#34;Exports all the data in a database as one gzipped sql file per table.&#34;</span>
+	echo <span style=color:#e6db74>&#34;Requires environment vars DB_NAME, DB_USER, and DB_PASSWORD&#34;</span>
+	exit <span style=color:#ae81ff>0</span>
+<span style=color:#66d9ef>fi</span>
 
-if (( $# &gt; 1 )); then
-	(&gt;&amp;2 echo &quot;Usage: ${0}&quot;)
-	exit 1
-fi
+<span style=color:#66d9ef>if</span> <span style=color:#f92672>((</span> $# &gt; <span style=color:#ae81ff>1</span> <span style=color:#f92672>))</span>; <span style=color:#66d9ef>then</span>
+	<span style=color:#f92672>(</span>&gt;&amp;<span style=color:#ae81ff>2</span> echo <span style=color:#e6db74>&#34;Usage: </span><span style=color:#e6db74>${</span>0<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span><span style=color:#f92672>)</span>
+	exit <span style=color:#ae81ff>1</span>
+<span style=color:#66d9ef>fi</span>
 
-# Modify this
-db_port_=&quot;3306&quot;
-db_name_=&quot;${DB_NAME}&quot;
-db_user_=&quot;${DB_USER}&quot;
-db_password_=&quot;${DB_PASWORD}&quot;
-loc_=&quot;${default_path_}&quot;
+<span style=color:#75715e># Modify this</span>
+db_port_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;3306&#34;</span>
+db_name_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_NAME<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+db_user_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_USER<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+db_password_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>DB_PASWORD<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+loc_<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>default_path_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
 
-if (( $# &gt; 0 )); then
-	loc=&quot;${1}&quot;
-fi
+<span style=color:#66d9ef>if</span> <span style=color:#f92672>((</span> $# &gt; <span style=color:#ae81ff>0</span> <span style=color:#f92672>))</span>; <span style=color:#66d9ef>then</span>
+	loc<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>1<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+<span style=color:#66d9ef>fi</span>
 
-for t in $(mysql -NBA -u &quot;${db_user_}&quot; --password=&quot;${db_password_}&quot; -D &quot;${db_name_}&quot; -e 'show tables'); do
-	echo &quot;Backing up $t...&quot;
-	# 2147483648 is the max
-	mysqldump \
-	--single-transaction \
-	--hex-blob \
-	--max_allowed_packet=2147483648 \
-	--port=&quot;${valar_port_}&quot; \
-	--user=&quot;${valar_user_}&quot; \
-	--password=&quot;${db_password_}&quot; \
-	&quot;${db_name_}&quot; \
-	&quot;${t}&quot; \
-	| gzip &gt; &quot;${loc_}/${t}.sql.gz&quot;
-done
+<span style=color:#66d9ef>for</span> t in <span style=color:#66d9ef>$(</span>mysql -NBA -u <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_user_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> --password<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_password_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> -D <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_name_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> -e <span style=color:#e6db74>&#39;show tables&#39;</span><span style=color:#66d9ef>)</span>; <span style=color:#66d9ef>do</span>
+	echo <span style=color:#e6db74>&#34;Backing up </span>$t<span style=color:#e6db74>...&#34;</span>
+	<span style=color:#75715e># 2147483648 is the max</span>
+	mysqldump <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	--single-transaction <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	--hex-blob <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	--max_allowed_packet<span style=color:#f92672>=</span><span style=color:#ae81ff>2147483648</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	--port<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>valar_port_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	--user<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>valar_user_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	--password<span style=color:#f92672>=</span><span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_password_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	<span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>db_name_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	<span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>t<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span> <span style=color:#ae81ff>\
+</span><span style=color:#ae81ff></span>	| gzip &gt; <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>loc_<span style=color:#e6db74>}</span><span style=color:#e6db74>/</span><span style=color:#e6db74>${</span>t<span style=color:#e6db74>}</span><span style=color:#e6db74>.sql.gz&#34;</span>
+<span style=color:#66d9ef>done</span>
 
-echo &quot;Backed up to ${loc_}&quot;
-</code></pre><h2 id=generating-an-erd>Generating an ERD</h2><p>This will generate an <a href=https://en.wikipedia.org/wiki/Entity%E2%80%93relationship_model>ERD</a>
+echo <span style=color:#e6db74>&#34;Backed up to </span><span style=color:#e6db74>${</span>loc_<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+</code></pre></div><h2 id=generating-an-erd>Generating an ERD</h2><p>This will generate an <a href=https://en.wikipedia.org/wiki/Entity%E2%80%93relationship_model>ERD</a>
 from a database connection. The script will output a
 <a href=https://en.wikipedia.org/wiki/GraphML>GraphML</a> file, which you can then open in a tool
 like <a href=https://www.yworks.com/products/yed>yEd</a> to apply a layout algorithm and change the style.
